    - Implemented passing input and outputdir to blackbox
    - Implemented selecting a preinstalled corpora
    - Implemented free text submission
    - Implemented interface in webservice itself (using XSLT)
    - Implemented parameter validation and feedback
    - First complete test of the system on ucto

April:
    - Fixed custom errors
    - Look into and fix large file upload problem
    - View of status 1 (running) now auto-refreshes
    - Added reset/go back function to run system on same input (but with different params), and abort buttons
    - Fixed zombie problem
    - Confine particular formats to subdirectories
    - Add ability to extract without subdirs
    - Implemented downloading all files as archive
    - Implemented writing configuration file (clam.xml) for the blackbox
    - Made parameter implementation thread-safe
    - Implemented parameter forbid, require
    - Improved settings import, removed globals
    - Implemented user authentication
    - Catch errors from the system 
    - Fixed bugs, render parameter groups
    - Started CLAM Documentation
    - Lots of fixes
    - Finished UCTO service (may act as example)
    - Made Tadpole service
    - Index now produces full CLAM response (index.xml is obsolete)
    - Tested and finished user authentication (HTTP Digest)
    - Implemented access control lists for parameters
    - Fixed multiple choice support in ChoiceParameter

May:
    - Interface improvements
    - Also show parameter in done-mode (status 2)
    - Added fancy table with pagination support for input/output files and project list
    - Uploads now proceed through AJAX, major interface improvements
    - fixed bugs with Choiceparameter (clam.xml)
    - Implemented status log and progress bar 
    - Split client library and data library, fixes
    - Make CLAM presentation
    - Input files now viewable and deletetable
    - Fix: no double files in list, adding a file with same name overwrites earlier file


