@@ -255,7 +255,7 @@ input#abortbutton, input#restartbutton {
 button#openeditor {
     margin-left: 10%;
 }
-#uploadprogress {
+#uploadprogress, #urluploadprogress {
     display: none;
 }
 
