@@ -51,11 +51,12 @@ May:
     - Added fancy table with pagination support for input/output files and project list
     - Uploads now proceed through AJAX, major interface improvements
     - fixed bugs with Choiceparameter (clam.xml)
+    - Disallow empty filename in submit user input (test)  (pre-beta1)  
     - Implemented status log and progress bar 
     - Split client library and data library, fixes
     - Make CLAM presentation
     - Input files now viewable and deletetable
     - Fix: no double files in list, adding a file with same name overwrites earlier file
-
+    - Added the option to download input files from an external URL
 
 
